--- a/docs/edurepo.tex
+++ b/docs/edurepo.tex
@@ -102,7 +102,7 @@ consumable from any educational software (once the APIs are exploited by
 the software provider), it is also important to provide
 basic capabilities with the repository to make the materials accessible
 to users via a web browser.  A reference view of the materials is required,
-and other software won't be able to consume the materials immediatel anyway.
+and other software won't be able to consume the materials immediately anyway.
 But the expectation for the future is that the best quality end user software that is able
 to consume the materials will come from other sources,
 and that the critical mass of raw materials in the repository will be a
@@ -149,9 +149,9 @@ particular individual to be reviewed.
 An important choice in licensing is whether or not the materials can be reused
 for profit.  Some individual contributors may not want their effort to be 
 reused by others for profit.  At the same time, the ability to use the 
-repository as part of a business will motivate some vendors to assist with
+repository as part of a for-profit product will motivate some vendors to assist with
 the maintenance or contents of the repository, and APIs can be designed with
-constraints that ensure that infrastructure costs are covered by heavy
+constraints that ensure that infrastructure costs of the repository are covered by heavy
 users of the repository (i.e., not individual accesses).
 
 \section*{Bootstrapping}
@@ -165,6 +165,10 @@ contain large amounts of materials in reasonable formats, and it may be
 possible technically and legally to import such materials into the
 respository.  It is expected that such existing resources will have a
 relatively small scope (e.g., high school mathematics).
+
+Beyond the data itself, existing resources may have already arrived at
+a good model for certain types of materials that can be reused by this
+project.
 
 Another potential bootstrapping mechanism is to start with a very limited
 scope (e.g., only several common core classes) with a specific plan in place
