minor readability improvement

--- a/docs/edutree.tex
+++ b/docs/edutree.tex
@@ -89,10 +89,11 @@ different purposes.  E.g., something like Blackboard where a teacher maintains
 schedules and assignments and points to different resources could consume
 the common information via API for integration into that environment.
 Existing web sites which point to educational materials by subject could
-reuse the course structure via API instead of inventing a new one.  But
+reuse the course structure via API instead of inventing a new one.  This 
+is an example of how the
+data could be reused in existing contexts to avoid duplication.  But
 note that enabling the consolidation onto fewer, higher quality indexes of
-materials should be a goal of this effort.  This is an example of how the
-data could be reused in existing contexts to avoid duplication.
+materials should be a goal of this effort.
 
 The class structure and common information will be stored in a common
 repository for consumption in multiple contexts, but a reference view (web
