add e-mail addr

--- a/docs/edurepo.tex
+++ b/docs/edurepo.tex
@@ -1,7 +1,7 @@
 \documentstyle[11pt]{article}
 \begin{document}
 \title{Educational Material Repository}
-\author{Jeff Trawick\\Raleigh, NC}
+\author{Jeff Trawick\\trawick@gmail.com\\Raleigh, NC}
 \maketitle
 A vast amount of educational materials are available currently, both from
 educational vendors as well as from a large number of
