--- a/docs/edutree.tex
+++ b/docs/edutree.tex
@@ -1,7 +1,7 @@
 \documentstyle[11pt]{article}
 \begin{document}
 \title{Multi-representation course description}
-\author{Jeff Trawick\\Raleigh, NC}
+\author{Jeff Trawick\\trawick@gmail.com\\Raleigh, NC}
 \maketitle
 
 \section*{Basic ideas}
